# tiny-rust-projects

./: LICENSE  README.md
chapter-02/arguments/: Cargo.toml
chapter-02/arguments/src/: main.rs
chapter-02/arguments/tests/: test1.rs
chapter-02/colored_code/: Cargo.toml
chapter-02/colored_code/src/: main.rs
chapter-02/colored_code/tests/: test1.in.txt  test1.out.txt  test1.rs
chapter-02/detect_tty/: Cargo.toml
chapter-02/detect_tty/src/: main.rs
chapter-02/detect_tty/tests/: test1.out.txt  test1.rs
chapter-02/exit_code/: notes.txt  test_script.bat  test_script.sh
chapter-02/stdin/: Cargo.toml
chapter-02/stdin/src/: main.rs
chapter-02/use_clap/: Cargo.toml
chapter-02/variables/: Cargo.toml
chapter-03/basic_adder/: Cargo.toml
chapter-03/colored_hello/: Cargo.toml
chapter-03/scattered_hello/: Cargo.toml
chapter-03/set_mode/: Cargo.toml
chapter-03/show_text/: Cargo.toml
chapter-03/stoppable_progress/: Cargo.toml
chapter-03/testable_text_viewer/: Cargo.toml
chapter-03/tui_adder/: Cargo.toml
chapter-04/clock/: Cargo.toml
chapter-04/gr_adder/: Cargo.toml
chapter-04/imgui_adder/: Cargo.toml
chapter-04/rmgui_adder/: Cargo.toml
chapter-05/genpdf_use/: Cargo.toml
chapter-05/template_use/: Cargo.toml  out.html
chapter-05/workbook_read/: Cargo.toml
chapter-05/workbook_write/: Cargo.toml  sales.xlsx
chapter-06/get_config/: Cargo.toml  base.json5  fixed.toml
chapter-06/using_db/: Cargo.toml
chapter-06/using_db/src/: main.rs
chapter-06/using_db/src/data_access/: mock_db.rs  mod.rs  persy_db.rs  postgres_db.rs  sqlite_db.rs
(+35 files in other folders)
