[package]
name = "using_db"
version = "0.1.0"
edition = "2021"

[dependencies]
bencode = "0.1.16"
bincode = "1.3.3"
bson = "2.5.0"
byteorder = "1.4.3"
persy = "1.4.3"
postcard = { version = "1.0.4", features = ["alloc"] }
postcard-derive = "0.1.1"
#fallible-iterator = "0.2.0"
postgres = "0.19.4"
rmp = "0.8.11"
rmp-serde = "1.1.1"
rustc-serialize = "0.3.24"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.93"
sqlite = "0.30.3"
